Fix soda-juice image size and dark-backhround overflow

--- a/style.css
+++ b/style.css
@@ -61,8 +61,11 @@ h2 {
     height: 100px;
 }
 
-.row .col {
-    overflow: hidden;
+.rounded-circle {
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    object-fit: cover;
 }
 
 h2:hover {
